--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@
     font-family: "Roboto";
 }
 
+a {
+    text-decoration: none;
+    color: initial;
+}
+
 body {
     padding: 20px;
     background-color: wheat;
