--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ a {
     color: initial;
 }
 
+li {
+    list-style: none;
+}
+
 body {
     padding: 20px;
     background-color: wheat;
@@ -62,11 +66,13 @@ nav>ul>a:active,
     background-color: rgb(255, 131, 129);
 }
 
-header {
+main {
     width: 100%;
     /* height: 80vh; */
     /* background-color: aqua; */
     flex: 2 0 auto;
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 footer {
@@ -74,4 +80,26 @@ footer {
     flex: 0.05 1 auto;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+#right_side {
+    height: 100%;
+    width: 100%;
+    flex: 1 0.8 auto;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+#right_side>ul {
+    position: relative;
+    top: 50px;
+}
+
+#left_side {
+    height: 100%;
+    width: 100%;
+    flex: 1 0.2 auto;
+    background-color: rgba(128, 128, 128, 0.7);
 }
