--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,7 @@ nav>ul>a:active,
 
 #exit {
     background-color: rgb(255, 131, 129);
+    cursor: pointer;
 }
 
 main {
@@ -85,21 +86,117 @@ footer {
 #right_side {
     height: 100%;
     width: 100%;
-    flex: 1 0.8 auto;
+    box-sizing: initial;
+    flex: 1 1 auto;
     background-color: gray;
     display: flex;
     justify-content: center;
     position: relative;
+    z-index: 2;
+    /* overflow: hidden; */
 }
 
 #right_side>ul {
     position: relative;
-    top: 50px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    /* justify-content: center; */
 }
 
 #left_side {
     height: 100%;
     width: 100%;
-    flex: 1 0.2 auto;
+    flex: 1 0.4 auto;
     background-color: rgba(128, 128, 128, 0.7);
+    position: relative;
+}
+
+#functions {
+    position: absolute;
+    float: right;
+    width: 100%;
+    height: auto;
+}
+
+#functions>ul {
+    float: right;
+    padding-right: 10px;
+}
+
+
+/* about css */
+
+#about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#about>div {
+    margin: 4em 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    line-height: 3em;
+}
+
+.right_side_list {
+    z-index: 1;
+    /* position: absolute; */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+    width: 100%;
+}
+
+#right_side>ul>* {
+    margin: 10px;
+}
+
+#right_side>ul>ul {
+    /* bottom: 10px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 10;
+    position: relative;
+    /* top: 150px; */
+    /* display: none; */
+    transition-duration: 00.3s;
+    height: 0px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.drop_down_list>li {
+    display: flex;
+    justify-content: center;
+    /* height: 0; */
+}
+
+.dropdown_images {
+    width: 20px;
+    height: 20px;
+    /* display: flex; */
+    /* margin: auto; */
+    /* justify-content: center; */
+}
+
+.inputs_attributes {
+    background-color: #333;
+    color: wheat;
+    text-align: center;
+    border-radius: 5px;
+    width: 80%;
+    /* border: none; */
+}
+
+.inputs_attributes:focus {
+    outline: none;
 }
