--- a/css/main.css
+++ b/css/main.css
@@ -96,14 +96,15 @@ footer {
     /* overflow: hidden; */
 }
 
-#right_side>ul {
-    position: relative;
+#main_list_container {
+    /* position: relative; */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
-    padding: 10px;
+    /* padding: 10px; */
     flex-direction: column;
     /* justify-content: center; */
+    /* text-align: center; */
 }
 
 #left_side {
@@ -124,6 +125,10 @@ footer {
 #functions>ul {
     float: right;
     padding-right: 10px;
+}
+
+#functions>ul>li {
+    text-align: center;
 }
 
 
@@ -148,30 +153,38 @@ footer {
 .right_side_list {
     z-index: 1;
     /* position: absolute; */
-    text-align: center;
     display: flex;
-    justify-content: center;
-    flex-direction: row-reverse;
+    /* justify-content: center; */
+    flex-direction: column;
     width: 100%;
 }
 
-#right_side>ul>* {
+.right_side_list>p {
+    text-align: center;
+}
+
+
+/* #right_side>ul>* {
     margin: 10px;
 }
 
 #right_side>ul>ul {
-    /* bottom: 10px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     z-index: 10;
     position: relative;
-    /* top: 150px; */
-    /* display: none; */
+
     transition-duration: 00.3s;
     height: 0px;
     width: 100%;
     overflow: hidden;
+} */
+
+.drop_down_list {
+    height: 0;
+    overflow: hidden;
+    transition-duration: 0.3s;
 }
 
 .drop_down_list>li {
@@ -199,4 +212,37 @@ footer {
 
 .inputs_attributes:focus {
     outline: none;
+}
+
+#attributes {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: auto;
+    background-color: rgba(20, 20, 20, 0.1);
+    border-bottom-right-radius: 10px;
+    overflow: hidden;
+    padding: 10px;
+}
+
+#attributes>ul>li {
+    text-align: center;
+    margin-top: 10px;
+}
+
+#result {
+    width: 100%;
+    height: 10%;
+    position: absolute;
+    /* background-color: black; */
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#show_result {
+    text-align: center;
+    color: wheat;
 }
